--- a/Navbar only/index.html
+++ b/Navbar only/index.html
@@ -19,39 +19,52 @@
 
 <body>
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top tranparent">
-        <a href="#title" class="navbar-brand">
-            <img src="/images/ietelogo.png" width="60" height="60" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top tranparent">
+            <a href="#title" class="navbar-brand">
+                <img src="/images/ietelogo.png" width="60" height="60" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item divider-vertical">
+                        <a class="nav-link" href="#home">Home</a>
+                    </li>
 
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#recruitments">Recruitments</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-icons" href="#facebook"><img src="/images/facebook.png" width="40" height="40"
-                            alt=""></a> <a class="nav-icons" href="#instagram"><img src="/images/instagram-sketched.png"
-                            width="40" height="40" alt=""></a><a class="nav-icons" href="#linkedin"><img
-                            src="/images/linkedin.png" width="40" height="40" alt=""></a>
-                </li>
+                    <li class="nav-item divider-vertical">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
 
-            </ul>
+                    <li class="nav-item divider-vertical">
+                        <a class="nav-link" href="#recruitments">Recruitments</a>
+                    </li>
 
-        </div>
-    </nav>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-icons" href="#facebook"><img src="/images/facebook.png" width="40" height="40"
+                                alt=""></a> <a class="nav-icons" href="#instagram"><img
+                                src="/images/instagram-sketched.png" width="40" height="40" alt=""></a><a
+                            class="nav-icons" href="#linkedin"><img src="/images/linkedin.png" width="40" height="40"
+                                alt=""></a>
+                    </li>
+
+                </ul>
+
+            </div>
+        </nav>
+    </div>
+
+    <!--About Card Section-->
+
+    <div class="container-fluid about">
+
+    </div>
+
+
 
 
     <!-- Optional JavaScript -->
