--- a/front end/index.html
+++ b/front end/index.html
@@ -101,12 +101,12 @@
         </div>
     </div>
 
-    <footer>
-        <div class="d-flex align-items-center">
-            <div class="footer">Visit us at <div class="bold-link">https://ietevit.com/</div>
-            </div>
-        </div>
-    </footer>
+    <div class="footer">
+        <div class="fixed-bottom footer-content">Visit us at <strong>https://ietevit.com/ </strong></div>
+    </div>
+
+
+
 
 
     <!-- Optional JavaScript -->
