--- a/Recruitments Page/index.html
+++ b/Recruitments Page/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Style Sheet -->
     <link rel="stylesheet" href="styles.css" />
+    <!--Roboto-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap');
+    </style>
 
     <title>Recruitment Page</title>
 </head>
@@ -40,7 +44,7 @@
                     </li>
 
                     <li class="nav-item divider-vertical">
-                        <a class="nav-link" href="#recruitments">Recruitments</a>
+                        <a class="nav-link r-tab" href="#recruitments">Recruitments</a>
                     </li>
 
                 </ul>
@@ -62,6 +66,7 @@
     <!--Recruitments Card Section-->
     <div class="Card-Section">
         <div class="row">
+            <div class="col-sm-12 year-heading">FOR FRESHERS</div>
             <div class="col-md-4">
                 <div class="thumbnail">
                     <img src="/images/ece.png" style="width:100%">
