--- a/About-Page/index.html
+++ b/About-Page/index.html
@@ -13,8 +13,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Style Sheet -->
     <link rel="stylesheet" href="styles.css" />
+    <!--Roboto-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap');
+    </style>
 
-    <title>Recruitment Portal</title>
+    <title>About</title>
 </head>
 
 <body>
@@ -36,7 +40,7 @@
                     </li>
 
                     <li class="nav-item divider-vertical">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link a-tab" href="#about">About</a>
                     </li>
 
                     <li class="nav-item divider-vertical">
