--- a/Home page/index.html
+++ b/Home page/index.html
@@ -12,7 +12,6 @@
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Google Font Roboto-->
-    <!--Medium 500-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap');
     </style>
@@ -37,15 +36,15 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item divider-vertical">
-                        <a class="#Home nav-link" href="#home">Home</a>
+                        <a class="nav-link h-tab" href="#home">Home</a>
                     </li>
 
                     <li class="nav-item divider-vertical">
-                        <a class="nav-link #About" href="#about">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
 
                     <li class="nav-item divider-vertical">
-                        <a class="nav-link #Recruitment" href="#recruitments">Recruitments</a>
+                        <a class="nav-link" href="#recruitments">Recruitments</a>
                     </li>
 
 
