--- a/About-Page/index.html
+++ b/About-Page/index.html
@@ -68,10 +68,10 @@
     <div class="background-image">
         <div class="container-fluid About-Section">
 
-            <div class="card-deck">
+            <div class="card-deck" >
                 <div class="container-fluid"></div>
-                <div class="card">
-                    <img src="/images/Story1.png" class="card-img-top" alt="...">
+                <div class="card" style="min-width: 26%">
+                    <img src="/images/Story1.png" class="card-img-top float-left" alt="...">
                     <div class="card-body">
                         <h5 class="w-75 card-title">Our Story</h5>
                         <p class="card-text">The IETE Students Forum is set up at Vellore Institute of Technology,
@@ -81,8 +81,8 @@
 
                     </div>
                 </div>
-                <div class="card">
-                    <img src="/images/Aim1.png" class="card-img-top" alt="...">
+                <div class="card" style="min-width: 26%">
+                    <img src="/images/Aim1.png" class="card-img-top float-left" alt="...">
                     <div class="card-body">
                         <h5 class="w-75 card-title">Our Aim</h5>
                         <p class="card-text">To provide a common platform for the student members to exchange ideas and
@@ -91,8 +91,10 @@
 
                     </div>
                 </div>
-                <div class="card">
-                    <img src="/images/Mission 1.1.png" class="card-img-top" alt="...">
+                
+                <div class="card" style="min-width: 26%; max-width: 350px;">
+                    
+                    <img src="/images/Mission 1.1.png" style="max-height: 200px;" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="w-75 card-title">Mission</h5>
                         <p class="card-text">To plan and organize technical programmes and activities like seminars,
@@ -100,10 +102,16 @@
 
                     </div>
                 </div>
+
+
             </div>
 
         </div>
     </div>
+
+
+
+
 
     <div class="footer">
         <div class="fixed-bottom footer-content">Visit us at <strong>https://ietevit.com/ </strong></div>
