--- a/Registration/reg.html
+++ b/Registration/reg.html
@@ -136,7 +136,7 @@
             <div class="container">
                 <div class="row">
                     <div class="lgx-heading">
-                        <h2 class="heading" style="padding: 2rem;">Contact Us</h2>
+                        <h2 class="heading" style="padding: 2rem;">Register Now</h2>
 
                     <div class="col-sm-12 col-md-6 col-md-offset-3">
 
